--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.1
 coverage==5.4
 Django==3.1.6
 gunicorn==20.0.4
+psycopg2-binary==2.8.6
 pylint-django==2.4.2
 pylint-plugin-utils==0.6
 pytz==2021.1
