--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,11 @@
 asgiref==3.3.1
-coverage==5.4
 dj-database-url==0.5.0
 Django==3.1.6
 gunicorn==20.0.4
 heroku==0.1.4
-ipywidgets==7.6.3
-jupyter==1.0.0
-jupyter-console==6.2.0
-jupyterlab-widgets==1.0.0
 psycopg2-binary==2.8.6
-python-dateutil==2.8.1
+pylint-django==2.4.2
+pylint-plugin-utils==0.6
+python-dateutil==1.5
 pytz==2021.1
-qtconsole==5.0.2
-QtPy==1.9.0
 sqlparse==0.4.1
-widgetsnbextension==3.5.1
